aws/istio-ingress/overlays/secure/ingress.yaml
<<<<<<< HEAD
apiVersion: extensions/v1beta1 # networking.k8s.io/v1beta1
=======
apiVersion: networking.k8s.io/v1beta1
>>>>>>> 0dd7b24f049aaff540231bf73fe153c2397be890
kind: Ingress
metadata:
  name: istio-ingress
  annotations:
    alb.ingress.kubernetes.io/certificate-arn: $(certArn)
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/inbound-cidrs: $(inboundCidrs)
    external-dns.alpha.kubernetes.io/hostname: $(hostname)
